--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9884b2">  <td>18/07/24 01:40:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignMeInPageTest.setUp()[pri:0, instance:com.cottonon.testcases.SignMeInPageTest@1f28c152]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@377478451</td>   <td></td> </tr>
-<tr bgcolor="9884b2">  <td>18/07/24 01:40:17</td>   <td>1048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignMeInPageTest.testLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.cottonon.testcases.SignMeInPageTest@1f28c152]">testLogin</td> 
-  <td>main@377478451</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>18/08/07 12:06:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.cottonon.testcases.HomePageTest@4afcd809]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1583159071</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>18/08/07 12:07:04</td>   <td>5137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.valiadtesearchbox()[pri:0, instance:com.cottonon.testcases.HomePageTest@4afcd809]">valiadtesearchbox</td> 
+  <td>main@1583159071</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>18/08/07 12:07:04</td>   <td>5146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.validatemoveableLink()[pri:0, instance:com.cottonon.testcases.HomePageTest@4afcd809]">validatemoveableLink</td> 
+  <td>main@1583159071</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>18/08/07 12:07:04</td>   <td>5157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.validatemoveableLink2()[pri:0, instance:com.cottonon.testcases.HomePageTest@4afcd809]">validatemoveableLink2</td> 
+  <td>main@1583159071</td>   <td></td> </tr>
 </table>
